posiGen_FullsendBox/src/objects/Assessor_Owner__c.object
<CustomObject>
    <description>Child to Property</description>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <label>Owner Role</label>
        <picklist>
            <picklistValues>
                <fullName>Signer 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signer 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signer 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signer 4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_del__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Assessor Owners</relationshipLabel>
        <relationshipName>Assessor_Owners_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Signature_Tag__c</fullName>
        <formula>CASE( TEXT(Owner_Role__c),
&quot;Signer 1&quot;,&quot;/S1/&quot;,
&quot;Signer 2&quot;,&quot;/S2/&quot;,
&quot;Signer 3&quot;,&quot;/S3/&quot;,
&quot;Signer 4&quot;,&quot;/S4/&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signature Tag</label>
        <type>Text</type>
    </fields>
    <label>Assessor Owner</label>
    <nameField>
        <label>Assessor Owner Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessor Owners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>